# youtube-playlist-exporter

./: .gitignore  README.md  exporter.py  main.py  pyproject.toml  retriever.py  utils.py
.github/workflows/: pytest.yml
app/: apimodels.py  exporter.py  exporters.py  exportmanager.py  main.py  options.py  retriever.py  utils.py
tests/: test_integ.py
tests/data/: resp_1.json  resp_2.json  resp_3.json
