[project]
name = "youtube-playlist-exporter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.11.14",
    "typer>=0.15.2",
]

[dependency-groups]
dev = [
    "aioresponses>=0.7.8",
    "pytest>=8.3.5",
]

[tool.setuptools]
packages = ["app"]

[project.scripts]
ype = "app.main:app"
youtube-playlist-exporter = "app.main:app"
